Benchmark composite and selective LV key shapes
The steady-state harness could only drive PARTITION BY account_id over
an unfiltered view, so two shapes the LV-private key plan is measured
against had no run at all: a composite key, and a wide symbol diff from
which few rows survive the view's filter.

--key-columns=2 adds a bounded region_id of the key's own type to the
base and to every PARTITION BY the run emits - the anchored window, the
bounded window --shape=mixed puts beside it, and the base's dedup keys -
all from one key list, so the sites cannot name different keys. The
second component advances once per full sweep of the account space
rather than per row. Per row it would have been worthless: an account
picked as rowIndex % A already determines rowIndex % k whenever k
divides A, so --recycle-accounts=1000 --key2-cardinality=8 built 1000
composite keys where it now builds 8000, and the run would have reported
a composite key while measuring a single one. The header line states
jointKeys rather than leaving it to be inferred, and the footprint line
reports the second dictionary separately from the first.

--residual-percent puts a threshold on the generated amount, admitting
that share of base rows. Every row carries a brand-new account by
default, so a commit's SymbolMapDiff stays as wide as the commit while
the view keys only the admitted rows; the closing # residual line
reports generated, admitted and the anchor map's own row count together.
The threshold sits half a step below the lowest admitted amount, so the
boundary never turns on whether 981 * 0.01 and the literal 9.81 are the
same double, and admittedRows() counts one generator period exactly.
That keeps the run's existing row-count oracle exact under a filter
instead of degrading it to a tolerance - the batch and restart checks
still fail on a single missing row.

--partition-key-mode is the flag the eventual legacy/private-id switch
lands on. Nothing can emit a translated symbol id yet, so it a